[project]
name = "tutorials"
version = "0.1.0"
description = "Utilities and tutorials for working with UCSF PCNSL CNS lymphoma MRI data"
authors = [{name = "CNS Lymphoma Genetics Project"}]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "boto3>=1.38",
    "nibabel>=5.0",
    "nilearn>=0.10",
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0",
    "ipykernel>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["*.py"]
